--- a/maven/org.eclipse.xtext.maven.plugin/pom.xml
+++ b/maven/org.eclipse.xtext.maven.plugin/pom.xml
@@ -3,12 +3,13 @@
 	<parent>
 		<groupId>org.eclipse.xtext</groupId>
 		<artifactId>org.eclipse.xtext.parent</artifactId>
-		<version>2.10.0-SNAPSHOT</version>
+		<version>2.10.0</version>
 		<relativePath>../org.eclipse.xtext.parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>xtext-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
+	<version>2.10.1</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -34,18 +35,18 @@
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.builder.standalone</artifactId>
-			<version>[${project.version}]</version>
+			<version>[2.10.0]</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.ecore</artifactId>
-			<version>[${project.version}]</version>
+			<version>[2.10.0]</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.generator</artifactId>
-			<version>[${project.version}]</version>
+			<version>[2.10.0]</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -92,7 +93,7 @@
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
 			<artifactId>org.eclipse.xtext.xbase</artifactId>
-			<version>[${project.version}]</version>
+			<version>[2.10.0]</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
